feat: add temporary policy api doc and test
