# docs/swagger.json
@@ -93,27 +93,23 @@
                 "operationId": "api-engine-policies-list",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "name": "max_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
-                        "example": "1,2,3",
                         "name": "ids",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "example": 10001,
-                        "name": "max_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "example": 1,
-                        "name": "min_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "example": 1592899208,
                         "name": "timestamp",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "min_id",
                         "in": "query"
                     }
                 ],
@@ -170,14 +166,12 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "example": 1592899208,
-                        "name": "begin_updated_at",
+                        "name": "end_updated_at",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "example": 1592899208,
-                        "name": "end_updated_at",
+                        "name": "begin_updated_at",
                         "in": "query"
                     }
                 ],
@@ -234,7 +228,6 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "example": 1592899208,
                         "name": "updated_at",
                         "in": "query"
                     }
@@ -317,7 +310,7 @@
                 }
             }
         },
-        "/api/v1/open/departments/{user_id}/groups": {
+        "/api/v1/open/departments/{department_id}/groups": {
             "get": {
                 "security": [
                     {
@@ -1549,26 +1542,22 @@
                     },
                     {
                         "type": "string",
-                        "example": "edit_host",
                         "name": "actionID",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "example": 1,
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "example": 100,
                         "name": "pageSize",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "example": 1592899208,
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "name": "timestamp",
                         "in": "query"
                     }
@@ -1633,7 +1622,6 @@
                     },
                     {
                         "type": "string",
-                        "example": "1,2,3",
                         "name": "ids",
                         "in": "query",
                         "required": true
@@ -2619,6 +2607,158 @@
                 }
             }
         },
+        "/api/v1/web/systems/{system_id}/temporary-policies": {
+            "post": {
+                "security": [
+                    {
+                        "AppCode": []
+                    },
+                    {
+                        "AppSecret": []
+                    }
+                ],
+                "description": "create temporary policies by application",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "web"
+                ],
+                "summary": "Create Temporary policies/创建临时权限策略",
+                "operationId": "api-web-create-temporary-policies",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "system id",
+                        "name": "system_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "create temporary policies",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.temporaryPoliciesSerializer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.Response"
+                        },
+                        "headers": {
+                            "X-Request-Id": {
+                                "type": "string",
+                                "description": "the request id"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/web/temporary-policies": {
+            "delete": {
+                "security": [
+                    {
+                        "AppCode": []
+                    },
+                    {
+                        "AppSecret": []
+                    }
+                ],
+                "description": "batch delete temporary policies",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "web"
+                ],
+                "summary": "Batch delete temporary policies/删除临时权限策略",
+                "operationId": "api-web-batch-delete-temporary-policies",
+                "parameters": [
+                    {
+                        "description": "delete temporary policy info",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.temporaryPoliciesDeleteSerializer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.Response"
+                        },
+                        "headers": {
+                            "X-Request-Id": {
+                                "type": "string",
+                                "description": "the request id"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/web/temporary-policies/before_expired_at": {
+            "delete": {
+                "security": [
+                    {
+                        "AppCode": []
+                    },
+                    {
+                        "AppSecret": []
+                    }
+                ],
+                "description": "batch delete temporary policies before expired_at",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "web"
+                ],
+                "summary": "Batch delete temporary policies before expired_at/删除指定过期时间之前临时权限策略",
+                "operationId": "api-web-batch-delete-temporary-policies-before-expired-at",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "expired_at",
+                        "name": "expired_at",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/util.Response"
+                        },
+                        "headers": {
+                            "X-Request-Id": {
+                                "type": "string",
+                                "description": "the request id"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/healthz": {
             "get": {
                 "description": "/healthz to make sure the server is health",
@@ -2860,6 +3000,12 @@
                         "type": "string"
                     }
                 },
+                "related_environments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.relatedEnvironment"
+                    }
+                },
                 "related_resource_types": {
                     "type": "array",
                     "items": {
@@ -2898,6 +3044,12 @@
                     "type": "array",
                     "items": {
                         "type": "string"
+                    }
+                },
+                "related_environments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.relatedEnvironment"
                     }
                 },
                 "related_resource_types": {
@@ -3684,6 +3836,16 @@
                 }
             }
         },
+        "handler.relatedEnvironment": {
+            "type": "object",
+            "properties": {
+                "type": {
+                    "description": "NOTE: currently only support period_daily, will support current_timestamp later\n      and no operators now!\n      only one field, but should be a struct! keep extensible in the future",
+                    "type": "string",
+                    "example": "period_daily"
+                }
+            }
+        },
         "handler.relatedResourceType": {
             "type": "object",
             "required": [
@@ -3761,46 +3923,14 @@
         "handler.resourceTypeSerializer": {
             "type": "object",
             "required": [
-                "id",
-                "name",
-                "name_en",
-                "provider_config"
+                "systems"
             ],
             "properties": {
-                "description": {
-                    "type": "string",
-                    "example": "biz_set is a"
+                "fields": {
+                    "type": "string"
                 },
-                "description_en": {
-                    "type": "string",
-                    "example": "biz_set is a"
-                },
-                "id": {
-                    "type": "string",
-                    "example": "biz_set"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "biz_set"
-                },
-                "name_en": {
-                    "type": "string",
-                    "example": "biz_set"
-                },
-                "parents": {
-                    "description": "can be empty",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/handler.referenceResourceType"
-                    }
-                },
-                "provider_config": {
-                    "type": "object",
-                    "$ref": "#/definitions/handler.resourceProviderConfig"
-                },
-                "version": {
-                    "type": "integer",
-                    "example": 1
+                "systems": {
+                    "type": "string"
                 }
             }
         },
@@ -3866,10 +3996,12 @@
             ],
             "properties": {
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "admin"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "user"
                 }
             }
         },
@@ -4053,6 +4185,51 @@
                 "provider_config": {
                     "type": "object",
                     "$ref": "#/definitions/handler.systemProviderConfig"
+                }
+            }
+        },
+        "handler.temporaryPoliciesDeleteSerializer": {
+            "type": "object",
+            "required": [
+                "ids",
+                "subject_id",
+                "subject_type",
+                "system_id"
+            ],
+            "properties": {
+                "ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "subject_id": {
+                    "type": "string"
+                },
+                "subject_type": {
+                    "type": "string"
+                },
+                "system_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.temporaryPoliciesSerializer": {
+            "type": "object",
+            "required": [
+                "policies",
+                "subject"
+            ],
+            "properties": {
+                "policies": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.policy"
+                    }
+                },
+                "subject": {
+                    "type": "object",
+                    "$ref": "#/definitions/handler.subject"
                 }
             }
         },
